Entrega 2/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    TkComent

Grammar

Rule 0     S' -> PROGRAMA
Rule 1     PROGRAMA -> TkProgram INSTRUCCION
Rule 2     INSTRUCCION -> ASIGNACION
Rule 3     INSTRUCCION -> CONDICIONAL
Rule 4     INSTRUCCION -> CASE
Rule 5     INSTRUCCION -> REPETICION_DET
Rule 6     INSTRUCCION -> REPETICION_INDET
Rule 7     INSTRUCCION -> BLOQUE
Rule 8     INSTRUCCION -> INPUT
Rule 9     INSTRUCCION -> OUTPUT
Rule 10    ASIGNACION -> VARIABLE TkAsignacion EXPRESION
Rule 11    CONDICIONAL -> TkIf EXPRESION TkThen INSTRUCCION ELSE
Rule 12    ELSE -> TkElse INSTRUCCION
Rule 13    ELSE -> <empty>
Rule 14    CASE -> TkCase EXPRESION TkOf CASECOND TkEnd
Rule 15    CASECOND -> EXPRESION TkFlechaCase INSTRUCCION TkPuntoYComa CASECONDDOS
Rule 16    CASECONDDOS -> EXPRESION TkFlechaCase INSTRUCCION TkPuntoYComa CASECONDDOS
Rule 17    CASECONDDOS -> <empty>
Rule 18    REPETICION_DET -> TkFor VARIABLE TkIn EXPRESION TkDo INSTRUCCION
Rule 19    REPETICION_INDET -> TkWhile EXPRESION TkDo INSTRUCCION
Rule 20    BLOQUE -> TkBegin DECLARE SECUENCIACION TkEnd
Rule 21    DECLARE -> TkDeclare LINEADECLARACION
Rule 22    DECLARE -> <empty>
Rule 23    SECUENCIACION -> SECUENCIACION TkPuntoYComa INSTRUCCION
Rule 24    SECUENCIACION -> INSTRUCCION
Rule 25    LINEADECLARACION -> VARIABLES TkAs TYPE
Rule 26    LINEADECLARACION -> LINEADECLARACION TkPuntoYComa VARIABLES TkAs TYPE
Rule 27    TYPE -> TkInt
Rule 28    TYPE -> TkBool
Rule 29    TYPE -> TkRange
Rule 30    VARIABLES -> VARIABLES TkComma VARIABLE
Rule 31    VARIABLES -> VARIABLE
Rule 32    INPUT -> TkRead VARIABLE
Rule 33    OUTPUT -> TkWrite IMPRESION
Rule 34    OUTPUT -> TkWriteLn IMPRESION
Rule 35    IMPRESION -> IMPRESION TkComma STRINEXP
Rule 36    IMPRESION -> STRINEXP
Rule 37    STRINEXP -> TkString
Rule 38    STRINEXP -> EXPRESION
Rule 39    EXPRESION -> EXPRBOOL
Rule 40    EXPRESION -> EXPREARITME
Rule 41    EXPRESION -> VARIABLE
Rule 42    EXPRESION -> EXPRANGO
Rule 43    EXPRESION -> TkParAbre EXPRESION TkParCierra
Rule 44    EXPRESION -> FUNCION
Rule 45    FUNCION -> FUNCIONES TkParAbre EXPRESION TkParCierra
Rule 46    FUNCIONES -> TkBottom
Rule 47    FUNCIONES -> TkRtoi
Rule 48    FUNCIONES -> TkLength
Rule 49    FUNCIONES -> TkPertenece
Rule 50    FUNCIONES -> TkTop
Rule 51    EXPRANGO -> EXPRESION TkConstruccion EXPRESION
Rule 52    EXPRANGO -> EXPRESION TkInterseccion EXPRESION
Rule 53    VARIABLE -> TkId
Rule 54    NUMERO -> TkNum
Rule 55    EXPRELACIONAL -> EXPRESION TkIgual EXPRESION
Rule 56    EXPRELACIONAL -> EXPRESION TkDesIgual EXPRESION
Rule 57    EXPRELACIONAL -> EXPRESION TkMenor EXPRESION
Rule 58    EXPRELACIONAL -> EXPRESION TkMenorIgual EXPRESION
Rule 59    EXPRELACIONAL -> EXPRESION TkMayor EXPRESION
Rule 60    EXPRELACIONAL -> EXPRESION TkMayorIgual EXPRESION
Rule 61    EXPREARITME -> BINEXPRARITM
Rule 62    EXPREARITME -> UNEXPRARITME
Rule 63    EXPREARITME -> NUMERO
Rule 64    BINEXPRARITM -> EXPRESION TkSuma EXPRESION
Rule 65    BINEXPRARITM -> EXPRESION TkResta EXPRESION
Rule 66    BINEXPRARITM -> EXPRESION TkAsterisco EXPRESION
Rule 67    BINEXPRARITM -> EXPRESION TkDiv EXPRESION
Rule 68    BINEXPRARITM -> EXPRESION TkModulo EXPRESION
Rule 69    UNEXPRARITME -> TkResta EXPRESION
Rule 70    UNEXPRARITME -> TkSuma EXPRESION
Rule 71    EXPRBOOL -> EXPRBINBOOL
Rule 72    EXPRBOOL -> BOOL
Rule 73    EXPRBOOL -> EXPRELACIONAL
Rule 74    EXPRBOOL -> UNEXPRBOOL
Rule 75    EXPRBINBOOL -> EXPRESION TkOr EXPRESION
Rule 76    EXPRBINBOOL -> EXPRESION TkAnd EXPRESION
Rule 77    UNEXPRBOOL -> TkNot EXPRESION
Rule 78    BOOL -> TkTrue
Rule 79    BOOL -> TkFalse

Terminals, with rules where they appear

TkAnd                : 76
TkAs                 : 25 26
TkAsignacion         : 10
TkAsterisco          : 66
TkBegin              : 20
TkBool               : 28
TkBottom             : 46
TkCase               : 14
TkComent             : 
TkComma              : 30 35
TkConstruccion       : 51
TkDeclare            : 21
TkDesIgual           : 56
TkDiv                : 67
TkDo                 : 18 19
TkElse               : 12
TkEnd                : 14 20
TkFalse              : 79
TkFlechaCase         : 15 16
TkFor                : 18
TkId                 : 53
TkIf                 : 11
TkIgual              : 55
TkIn                 : 18
TkInt                : 27
TkInterseccion       : 52
TkLength             : 48
TkMayor              : 59
TkMayorIgual         : 60
TkMenor              : 57
TkMenorIgual         : 58
TkModulo             : 68
TkNot                : 77
TkNum                : 54
TkOf                 : 14
TkOr                 : 75
TkParAbre            : 43 45
TkParCierra          : 43 45
TkPertenece          : 49
TkProgram            : 1
TkPuntoYComa         : 15 16 23 26
TkRange              : 29
TkRead               : 32
TkResta              : 65 69
TkRtoi               : 47
TkString             : 37
TkSuma               : 64 70
TkThen               : 11
TkTop                : 50
TkTrue               : 78
TkWhile              : 19
TkWrite              : 33
TkWriteLn            : 34
error                : 

Nonterminals, with rules where they appear

ASIGNACION           : 2
BINEXPRARITM         : 61
BLOQUE               : 7
BOOL                 : 72
CASE                 : 4
CASECOND             : 14
CASECONDDOS          : 15 16
CONDICIONAL          : 3
DECLARE              : 20
ELSE                 : 11
EXPRANGO             : 42
EXPRBINBOOL          : 71
EXPRBOOL             : 39
EXPREARITME          : 40
EXPRELACIONAL        : 73
EXPRESION            : 10 11 14 15 16 18 19 38 43 45 51 51 52 52 55 55 56 56 57 57 58 58 59 59 60 60 64 64 65 65 66 66 67 67 68 68 69 70 75 75 76 76 77
FUNCION              : 44
FUNCIONES            : 45
IMPRESION            : 33 34 35
INPUT                : 8
INSTRUCCION          : 1 11 12 15 16 18 19 23 24
LINEADECLARACION     : 21 26
NUMERO               : 63
OUTPUT               : 9
PROGRAMA             : 0
REPETICION_DET       : 5
REPETICION_INDET     : 6
SECUENCIACION        : 20 23
STRINEXP             : 35 36
TYPE                 : 25 26
UNEXPRARITME         : 62
UNEXPRBOOL           : 74
VARIABLE             : 10 18 30 31 32 41
VARIABLES            : 25 26 30

Parsing method: LALR

state 0

    (0) S' -> . PROGRAMA
    (1) PROGRAMA -> . TkProgram INSTRUCCION

    TkProgram       shift and go to state 1

    PROGRAMA                       shift and go to state 2

state 1

    (1) PROGRAMA -> TkProgram . INSTRUCCION
    (2) INSTRUCCION -> . ASIGNACION
    (3) INSTRUCCION -> . CONDICIONAL
    (4) INSTRUCCION -> . CASE
    (5) INSTRUCCION -> . REPETICION_DET
    (6) INSTRUCCION -> . REPETICION_INDET
    (7) INSTRUCCION -> . BLOQUE
    (8) INSTRUCCION -> . INPUT
    (9) INSTRUCCION -> . OUTPUT
    (10) ASIGNACION -> . VARIABLE TkAsignacion EXPRESION
    (11) CONDICIONAL -> . TkIf EXPRESION TkThen INSTRUCCION ELSE
    (14) CASE -> . TkCase EXPRESION TkOf CASECOND TkEnd
    (18) REPETICION_DET -> . TkFor VARIABLE TkIn EXPRESION TkDo INSTRUCCION
    (19) REPETICION_INDET -> . TkWhile EXPRESION TkDo INSTRUCCION
    (20) BLOQUE -> . TkBegin DECLARE SECUENCIACION TkEnd
    (32) INPUT -> . TkRead VARIABLE
    (33) OUTPUT -> . TkWrite IMPRESION
    (34) OUTPUT -> . TkWriteLn IMPRESION
    (53) VARIABLE -> . TkId

    TkIf            shift and go to state 4
    TkCase          shift and go to state 6
    TkFor           shift and go to state 12
    TkWhile         shift and go to state 11
    TkBegin         shift and go to state 13
    TkRead          shift and go to state 8
    TkWrite         shift and go to state 20
    TkWriteLn       shift and go to state 14
    TkId            shift and go to state 3

    CASE                           shift and go to state 7
    REPETICION_DET                 shift and go to state 18
    ASIGNACION                     shift and go to state 9
    INSTRUCCION                    shift and go to state 5
    REPETICION_INDET               shift and go to state 10
    OUTPUT                         shift and go to state 21
    VARIABLE                       shift and go to state 15
    INPUT                          shift and go to state 16
    BLOQUE                         shift and go to state 17
    CONDICIONAL                    shift and go to state 19

state 2

    (0) S' -> PROGRAMA .



state 3

    (53) VARIABLE -> TkId .

    TkConstruccion  reduce using rule 53 (VARIABLE -> TkId .)
    TkInterseccion  reduce using rule 53 (VARIABLE -> TkId .)
    TkOr            reduce using rule 53 (VARIABLE -> TkId .)
    TkAnd           reduce using rule 53 (VARIABLE -> TkId .)
    TkIgual         reduce using rule 53 (VARIABLE -> TkId .)
    TkDesIgual      reduce using rule 53 (VARIABLE -> TkId .)
    TkMenor         reduce using rule 53 (VARIABLE -> TkId .)
    TkMenorIgual    reduce using rule 53 (VARIABLE -> TkId .)
    TkMayor         reduce using rule 53 (VARIABLE -> TkId .)
    TkMayorIgual    reduce using rule 53 (VARIABLE -> TkId .)
    TkSuma          reduce using rule 53 (VARIABLE -> TkId .)
    TkResta         reduce using rule 53 (VARIABLE -> TkId .)
    TkAsterisco     reduce using rule 53 (VARIABLE -> TkId .)
    TkDiv           reduce using rule 53 (VARIABLE -> TkId .)
    TkModulo        reduce using rule 53 (VARIABLE -> TkId .)
    TkThen          reduce using rule 53 (VARIABLE -> TkId .)
    TkOf            reduce using rule 53 (VARIABLE -> TkId .)
    TkDo            reduce using rule 53 (VARIABLE -> TkId .)
    TkComma         reduce using rule 53 (VARIABLE -> TkId .)
    $end            reduce using rule 53 (VARIABLE -> TkId .)
    TkEnd           reduce using rule 53 (VARIABLE -> TkId .)
    TkPuntoYComa    reduce using rule 53 (VARIABLE -> TkId .)
    TkElse          reduce using rule 53 (VARIABLE -> TkId .)
    TkParCierra     reduce using rule 53 (VARIABLE -> TkId .)
    TkFlechaCase    reduce using rule 53 (VARIABLE -> TkId .)
    TkAs            reduce using rule 53 (VARIABLE -> TkId .)
    TkAsignacion    reduce using rule 53 (VARIABLE -> TkId .)
    TkIn            reduce using rule 53 (VARIABLE -> TkId .)


state 4

    (11) CONDICIONAL -> TkIf . EXPRESION TkThen INSTRUCCION ELSE
    (39) EXPRESION -> . EXPRBOOL
    (40) EXPRESION -> . EXPREARITME
    (41) EXPRESION -> . VARIABLE
    (42) EXPRESION -> . EXPRANGO
    (43) EXPRESION -> . TkParAbre EXPRESION TkParCierra
    (44) EXPRESION -> . FUNCION
    (71) EXPRBOOL -> . EXPRBINBOOL
    (72) EXPRBOOL -> . BOOL
    (73) EXPRBOOL -> . EXPRELACIONAL
    (74) EXPRBOOL -> . UNEXPRBOOL
    (61) EXPREARITME -> . BINEXPRARITM
    (62) EXPREARITME -> . UNEXPRARITME
    (63) EXPREARITME -> . NUMERO
    (53) VARIABLE -> . TkId
    (51) EXPRANGO -> . EXPRESION TkConstruccion EXPRESION
    (52) EXPRANGO -> . EXPRESION TkInterseccion EXPRESION
    (45) FUNCION -> . FUNCIONES TkParAbre EXPRESION TkParCierra
    (75) EXPRBINBOOL -> . EXPRESION TkOr EXPRESION
    (76) EXPRBINBOOL -> . EXPRESION TkAnd EXPRESION
    (78) BOOL -> . TkTrue
    (79) BOOL -> . TkFalse
    (55) EXPRELACIONAL -> . EXPRESION TkIgual EXPRESION
    (56) EXPRELACIONAL -> . EXPRESION TkDesIgual EXPRESION
    (57) EXPRELACIONAL -> . EXPRESION TkMenor EXPRESION
    (58) EXPRELACIONAL -> . EXPRESION TkMenorIgual EXPRESION
    (59) EXPRELACIONAL -> . EXPRESION TkMayor EXPRESION
    (60) EXPRELACIONAL -> . EXPRESION TkMayorIgual EXPRESION
    (77) UNEXPRBOOL -> . TkNot EXPRESION
    (64) BINEXPRARITM -> . EXPRESION TkSuma EXPRESION
    (65) BINEXPRARITM -> . EXPRESION TkResta EXPRESION
    (66) BINEXPRARITM -> . EXPRESION TkAsterisco EXPRESION
    (67) BINEXPRARITM -> . EXPRESION TkDiv EXPRESION
    (68) BINEXPRARITM -> . EXPRESION TkModulo EXPRESION
    (69) UNEXPRARITME -> . TkResta EXPRESION
    (70) UNEXPRARITME -> . TkSuma EXPRESION
    (54) NUMERO -> . TkNum
    (46) FUNCIONES -> . TkBottom
    (47) FUNCIONES -> . TkRtoi
    (48) FUNCIONES -> . TkLength
    (49) FUNCIONES -> . TkPertenece
    (50) FUNCIONES -> . TkTop

    TkParAbre       shift and go to state 26
    TkId            shift and go to state 3
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 24
    TkNot           shift and go to state 27
    TkResta         shift and go to state 44
    TkSuma          shift and go to state 33
    TkNum           shift and go to state 25
    TkBottom        shift and go to state 42
    TkRtoi          shift and go to state 38
    TkLength        shift and go to state 34
    TkPertenece     shift and go to state 28
    TkTop           shift and go to state 40

    EXPRESION                      shift and go to state 22
    UNEXPRBOOL                     shift and go to state 41
    EXPRBOOL                       shift and go to state 43
    EXPRELACIONAL                  shift and go to state 35
    UNEXPRARITME                   shift and go to state 30
    FUNCIONES                      shift and go to state 45
    BOOL                           shift and go to state 31
    NUMERO                         shift and go to state 36
    EXPREARITME                    shift and go to state 29
    VARIABLE                       shift and go to state 37
    EXPRBINBOOL                    shift and go to state 47
    BINEXPRARITM                   shift and go to state 32
    EXPRANGO                       shift and go to state 46
    FUNCION                        shift and go to state 39

state 5

    (1) PROGRAMA -> TkProgram INSTRUCCION .

    $end            reduce using rule 1 (PROGRAMA -> TkProgram INSTRUCCION .)


state 6

    (14) CASE -> TkCase . EXPRESION TkOf CASECOND TkEnd
    (39) EXPRESION -> . EXPRBOOL
    (40) EXPRESION -> . EXPREARITME
    (41) EXPRESION -> . VARIABLE
    (42) EXPRESION -> . EXPRANGO
    (43) EXPRESION -> . TkParAbre EXPRESION TkParCierra
    (44) EXPRESION -> . FUNCION
    (71) EXPRBOOL -> . EXPRBINBOOL
    (72) EXPRBOOL -> . BOOL
    (73) EXPRBOOL -> . EXPRELACIONAL
    (74) EXPRBOOL -> . UNEXPRBOOL
    (61) EXPREARITME -> . BINEXPRARITM
    (62) EXPREARITME -> . UNEXPRARITME
    (63) EXPREARITME -> . NUMERO
    (53) VARIABLE -> . TkId
    (51) EXPRANGO -> . EXPRESION TkConstruccion EXPRESION
    (52) EXPRANGO -> . EXPRESION TkInterseccion EXPRESION
    (45) FUNCION -> . FUNCIONES TkParAbre EXPRESION TkParCierra
    (75) EXPRBINBOOL -> . EXPRESION TkOr EXPRESION
    (76) EXPRBINBOOL -> . EXPRESION TkAnd EXPRESION
    (78) BOOL -> . TkTrue
    (79) BOOL -> . TkFalse
    (55) EXPRELACIONAL -> . EXPRESION TkIgual EXPRESION
    (56) EXPRELACIONAL -> . EXPRESION TkDesIgual EXPRESION
    (57) EXPRELACIONAL -> . EXPRESION TkMenor EXPRESION
    (58) EXPRELACIONAL -> . EXPRESION TkMenorIgual EXPRESION
    (59) EXPRELACIONAL -> . EXPRESION TkMayor EXPRESION
    (60) EXPRELACIONAL -> . EXPRESION TkMayorIgual EXPRESION
    (77) UNEXPRBOOL -> . TkNot EXPRESION
    (64) BINEXPRARITM -> . EXPRESION TkSuma EXPRESION
    (65) BINEXPRARITM -> . EXPRESION TkResta EXPRESION
    (66) BINEXPRARITM -> . EXPRESION TkAsterisco EXPRESION
    (67) BINEXPRARITM -> . EXPRESION TkDiv EXPRESION
    (68) BINEXPRARITM -> . EXPRESION TkModulo EXPRESION
    (69) UNEXPRARITME -> . TkResta EXPRESION
    (70) UNEXPRARITME -> . TkSuma EXPRESION
    (54) NUMERO -> . TkNum
    (46) FUNCIONES -> . TkBottom
    (47) FUNCIONES -> . TkRtoi
    (48) FUNCIONES -> . TkLength
    (49) FUNCIONES -> . TkPertenece
    (50) FUNCIONES -> . TkTop

    TkParAbre       shift and go to state 26
    TkId            shift and go to state 3
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 24
    TkNot           shift and go to state 27
    TkResta         shift and go to state 44
    TkSuma          shift and go to state 33
    TkNum           shift and go to state 25
    TkBottom        shift and go to state 42
    TkRtoi          shift and go to state 38
    TkLength        shift and go to state 34
    TkPertenece     shift and go to state 28
    TkTop           shift and go to state 40

    EXPRESION                      shift and go to state 48
    UNEXPRBOOL                     shift and go to state 41
    EXPRBOOL                       shift and go to state 43
    EXPRELACIONAL                  shift and go to state 35
    FUNCIONES                      shift and go to state 45
    UNEXPRARITME                   shift and go to state 30
    NUMERO                         shift and go to state 36
    EXPREARITME                    shift and go to state 29
    VARIABLE                       shift and go to state 37
    BOOL                           shift and go to state 31
    EXPRBINBOOL                    shift and go to state 47
    BINEXPRARITM                   shift and go to state 32
    EXPRANGO                       shift and go to state 46
    FUNCION                        shift and go to state 39

state 7

    (4) INSTRUCCION -> CASE .

    TkElse          reduce using rule 4 (INSTRUCCION -> CASE .)
    $end            reduce using rule 4 (INSTRUCCION -> CASE .)
    TkEnd           reduce using rule 4 (INSTRUCCION -> CASE .)
    TkPuntoYComa    reduce using rule 4 (INSTRUCCION -> CASE .)


state 8

    (32) INPUT -> TkRead . VARIABLE
    (53) VARIABLE -> . TkId

    TkId            shift and go to state 3

    VARIABLE                       shift and go to state 49

state 9

    (2) INSTRUCCION -> ASIGNACION .

    TkElse          reduce using rule 2 (INSTRUCCION -> ASIGNACION .)
    $end            reduce using rule 2 (INSTRUCCION -> ASIGNACION .)
    TkEnd           reduce using rule 2 (INSTRUCCION -> ASIGNACION .)
    TkPuntoYComa    reduce using rule 2 (INSTRUCCION -> ASIGNACION .)


state 10

    (6) INSTRUCCION -> REPETICION_INDET .

    TkElse          reduce using rule 6 (INSTRUCCION -> REPETICION_INDET .)
    $end            reduce using rule 6 (INSTRUCCION -> REPETICION_INDET .)
    TkEnd           reduce using rule 6 (INSTRUCCION -> REPETICION_INDET .)
    TkPuntoYComa    reduce using rule 6 (INSTRUCCION -> REPETICION_INDET .)


state 11

    (19) REPETICION_INDET -> TkWhile . EXPRESION TkDo INSTRUCCION
    (39) EXPRESION -> . EXPRBOOL
    (40) EXPRESION -> . EXPREARITME
    (41) EXPRESION -> . VARIABLE
    (42) EXPRESION -> . EXPRANGO
    (43) EXPRESION -> . TkParAbre EXPRESION TkParCierra
    (44) EXPRESION -> . FUNCION
    (71) EXPRBOOL -> . EXPRBINBOOL
    (72) EXPRBOOL -> . BOOL
    (73) EXPRBOOL -> . EXPRELACIONAL
    (74) EXPRBOOL -> . UNEXPRBOOL
    (61) EXPREARITME -> . BINEXPRARITM
    (62) EXPREARITME -> . UNEXPRARITME
    (63) EXPREARITME -> . NUMERO
    (53) VARIABLE -> . TkId
    (51) EXPRANGO -> . EXPRESION TkConstruccion EXPRESION
    (52) EXPRANGO -> . EXPRESION TkInterseccion EXPRESION
    (45) FUNCION -> . FUNCIONES TkParAbre EXPRESION TkParCierra
    (75) EXPRBINBOOL -> . EXPRESION TkOr EXPRESION
    (76) EXPRBINBOOL -> . EXPRESION TkAnd EXPRESION
    (78) BOOL -> . TkTrue
    (79) BOOL -> . TkFalse
    (55) EXPRELACIONAL -> . EXPRESION TkIgual EXPRESION
    (56) EXPRELACIONAL -> . EXPRESION TkDesIgual EXPRESION
    (57) EXPRELACIONAL -> . EXPRESION TkMenor EXPRESION
    (58) EXPRELACIONAL -> . EXPRESION TkMenorIgual EXPRESION
    (59) EXPRELACIONAL -> . EXPRESION TkMayor EXPRESION
    (60) EXPRELACIONAL -> . EXPRESION TkMayorIgual EXPRESION
    (77) UNEXPRBOOL -> . TkNot EXPRESION
    (64) BINEXPRARITM -> . EXPRESION TkSuma EXPRESION
    (65) BINEXPRARITM -> . EXPRESION TkResta EXPRESION
    (66) BINEXPRARITM -> . EXPRESION TkAsterisco EXPRESION
    (67) BINEXPRARITM -> . EXPRESION TkDiv EXPRESION
    (68) BINEXPRARITM -> . EXPRESION TkModulo EXPRESION
    (69) UNEXPRARITME -> . TkResta EXPRESION
    (70) UNEXPRARITME -> . TkSuma EXPRESION
    (54) NUMERO -> . TkNum
    (46) FUNCIONES -> . TkBottom
    (47) FUNCIONES -> . TkRtoi
    (48) FUNCIONES -> . TkLength
    (49) FUNCIONES -> . TkPertenece
    (50) FUNCIONES -> . TkTop

    TkParAbre       shift and go to state 26
    TkId            shift and go to state 3
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 24
    TkNot           shift and go to state 27
    TkResta         shift and go to state 44
    TkSuma          shift and go to state 33
    TkNum           shift and go to state 25
    TkBottom        shift and go to state 42
    TkRtoi          shift and go to state 38
    TkLength        shift and go to state 34
    TkPertenece     shift and go to state 28
    TkTop           shift and go to state 40

    EXPRESION                      shift and go to state 50
    UNEXPRBOOL                     shift and go to state 41
    EXPRBOOL                       shift and go to state 43
    EXPRELACIONAL                  shift and go to state 35
    FUNCIONES                      shift and go to state 45
    UNEXPRARITME                   shift and go to state 30
    BOOL                           shift and go to state 31
    NUMERO                         shift and go to state 36
    EXPREARITME                    shift and go to state 29
    VARIABLE                       shift and go to state 37
    EXPRBINBOOL                    shift and go to state 47
    BINEXPRARITM                   shift and go to state 32
    EXPRANGO                       shift and go to state 46
    FUNCION                        shift and go to state 39

state 12

    (18) REPETICION_DET -> TkFor . VARIABLE TkIn EXPRESION TkDo INSTRUCCION
    (53) VARIABLE -> . TkId

    TkId            shift and go to state 3

    VARIABLE                       shift and go to state 51

state 13

    (20) BLOQUE -> TkBegin . DECLARE SECUENCIACION TkEnd
    (21) DECLARE -> . TkDeclare LINEADECLARACION
    (22) DECLARE -> .

    TkDeclare       shift and go to state 53
    TkIf            reduce using rule 22 (DECLARE -> .)
    TkCase          reduce using rule 22 (DECLARE -> .)
    TkFor           reduce using rule 22 (DECLARE -> .)
    TkWhile         reduce using rule 22 (DECLARE -> .)
    TkBegin         reduce using rule 22 (DECLARE -> .)
    TkRead          reduce using rule 22 (DECLARE -> .)
    TkWrite         reduce using rule 22 (DECLARE -> .)
    TkWriteLn       reduce using rule 22 (DECLARE -> .)
    TkId            reduce using rule 22 (DECLARE -> .)

    DECLARE                        shift and go to state 52

state 14

    (34) OUTPUT -> TkWriteLn . IMPRESION
    (35) IMPRESION -> . IMPRESION TkComma STRINEXP
    (36) IMPRESION -> . STRINEXP
    (37) STRINEXP -> . TkString
    (38) STRINEXP -> . EXPRESION
    (39) EXPRESION -> . EXPRBOOL
    (40) EXPRESION -> . EXPREARITME
    (41) EXPRESION -> . VARIABLE
    (42) EXPRESION -> . EXPRANGO
    (43) EXPRESION -> . TkParAbre EXPRESION TkParCierra
    (44) EXPRESION -> . FUNCION
    (71) EXPRBOOL -> . EXPRBINBOOL
    (72) EXPRBOOL -> . BOOL
    (73) EXPRBOOL -> . EXPRELACIONAL
    (74) EXPRBOOL -> . UNEXPRBOOL
    (61) EXPREARITME -> . BINEXPRARITM
    (62) EXPREARITME -> . UNEXPRARITME
    (63) EXPREARITME -> . NUMERO
    (53) VARIABLE -> . TkId
    (51) EXPRANGO -> . EXPRESION TkConstruccion EXPRESION
    (52) EXPRANGO -> . EXPRESION TkInterseccion EXPRESION
    (45) FUNCION -> . FUNCIONES TkParAbre EXPRESION TkParCierra
    (75) EXPRBINBOOL -> . EXPRESION TkOr EXPRESION
    (76) EXPRBINBOOL -> . EXPRESION TkAnd EXPRESION
    (78) BOOL -> . TkTrue
    (79) BOOL -> . TkFalse
    (55) EXPRELACIONAL -> . EXPRESION TkIgual EXPRESION
    (56) EXPRELACIONAL -> . EXPRESION TkDesIgual EXPRESION
    (57) EXPRELACIONAL -> . EXPRESION TkMenor EXPRESION
    (58) EXPRELACIONAL -> . EXPRESION TkMenorIgual EXPRESION
    (59) EXPRELACIONAL -> . EXPRESION TkMayor EXPRESION
    (60) EXPRELACIONAL -> . EXPRESION TkMayorIgual EXPRESION
    (77) UNEXPRBOOL -> . TkNot EXPRESION
    (64) BINEXPRARITM -> . EXPRESION TkSuma EXPRESION
    (65) BINEXPRARITM -> . EXPRESION TkResta EXPRESION
    (66) BINEXPRARITM -> . EXPRESION TkAsterisco EXPRESION
    (67) BINEXPRARITM -> . EXPRESION TkDiv EXPRESION
    (68) BINEXPRARITM -> . EXPRESION TkModulo EXPRESION
    (69) UNEXPRARITME -> . TkResta EXPRESION
    (70) UNEXPRARITME -> . TkSuma EXPRESION
    (54) NUMERO -> . TkNum
    (46) FUNCIONES -> . TkBottom
    (47) FUNCIONES -> . TkRtoi
    (48) FUNCIONES -> . TkLength
    (49) FUNCIONES -> . TkPertenece
    (50) FUNCIONES -> . TkTop

    TkString        shift and go to state 56
    TkParAbre       shift and go to state 26
    TkId            shift and go to state 3
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 24
    TkNot           shift and go to state 27
    TkResta         shift and go to state 44
    TkSuma          shift and go to state 33
    TkNum           shift and go to state 25
    TkBottom        shift and go to state 42
    TkRtoi          shift and go to state 38
    TkLength        shift and go to state 34
    TkPertenece     shift and go to state 28
    TkTop           shift and go to state 40

    EXPRESION                      shift and go to state 54
    UNEXPRBOOL                     shift and go to state 41
    STRINEXP                       shift and go to state 55
    FUNCIONES                      shift and go to state 45
    EXPRELACIONAL                  shift and go to state 35
    EXPRBINBOOL                    shift and go to state 47
    UNEXPRARITME                   shift and go to state 30
    IMPRESION                      shift and go to state 57
    BOOL                           shift and go to state 31
    NUMERO                         shift and go to state 36
    EXPREARITME                    shift and go to state 29
    VARIABLE                       shift and go to state 37
    FUNCION                        shift and go to state 39
    BINEXPRARITM                   shift and go to state 32
    EXPRANGO                       shift and go to state 46
    EXPRBOOL                       shift and go to state 43

state 15

    (10) ASIGNACION -> VARIABLE . TkAsignacion EXPRESION

    TkAsignacion    shift and go to state 58


state 16

    (8) INSTRUCCION -> INPUT .

    TkElse          reduce using rule 8 (INSTRUCCION -> INPUT .)
    $end            reduce using rule 8 (INSTRUCCION -> INPUT .)
    TkEnd           reduce using rule 8 (INSTRUCCION -> INPUT .)
    TkPuntoYComa    reduce using rule 8 (INSTRUCCION -> INPUT .)


state 17

    (7) INSTRUCCION -> BLOQUE .

    TkElse          reduce using rule 7 (INSTRUCCION -> BLOQUE .)
    $end            reduce using rule 7 (INSTRUCCION -> BLOQUE .)
    TkEnd           reduce using rule 7 (INSTRUCCION -> BLOQUE .)
    TkPuntoYComa    reduce using rule 7 (INSTRUCCION -> BLOQUE .)


state 18

    (5) INSTRUCCION -> REPETICION_DET .

    TkElse          reduce using rule 5 (INSTRUCCION -> REPETICION_DET .)
    $end            reduce using rule 5 (INSTRUCCION -> REPETICION_DET .)
    TkEnd           reduce using rule 5 (INSTRUCCION -> REPETICION_DET .)
    TkPuntoYComa    reduce using rule 5 (INSTRUCCION -> REPETICION_DET .)


state 19

    (3) INSTRUCCION -> CONDICIONAL .

    TkElse          reduce using rule 3 (INSTRUCCION -> CONDICIONAL .)
    $end            reduce using rule 3 (INSTRUCCION -> CONDICIONAL .)
    TkEnd           reduce using rule 3 (INSTRUCCION -> CONDICIONAL .)
    TkPuntoYComa    reduce using rule 3 (INSTRUCCION -> CONDICIONAL .)


state 20
